adding in new data file fech_yaml/2004/20040101/102497.fec.yml

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "maplight-convert"]
 	path = maplight-convert
 	url = git@github.com:h4ck3rm1k3/rootstriker-fec-maplight-wiki.git
+[submodule "FECFieldDocumentation"]
+	path = FECFieldDocumentation
+	url = git@github.com:h4ck3rm1k3/FEC-Field-Documentation.git
